[gd_scene load_steps=96 format=3 uid="uid://ls1l2ut2f0cx"]

[ext_resource type="Script" path="res://player/script_player/player.gd" id="1_rx7fi"]
[ext_resource type="Script" path="res://player/hud.gd" id="2_4h548"]
[ext_resource type="Shader" path="res://texture/shader/time_rewind_shader.gdshader" id="2_tbtnr"]
[ext_resource type="Texture2D" uid="uid://bd8l8n45f0tqt" path="res://texture/crossair/main_crossair.png" id="2_ucwmm"]
[ext_resource type="Texture2D" uid="uid://djjdih25h7sra" path="res://texture/crossair/time_speed_crossair.png" id="3_scvu6"]
[ext_resource type="Shader" path="res://texture/shader/timer_speed_shader.gdshader" id="4_lf8tu"]
[ext_resource type="Texture2D" uid="uid://cqkodyqdurirg" path="res://texture/crossair/time_rewind_crossair.png" id="4_u0lgh"]
[ext_resource type="AudioStream" uid="uid://dot0px8gaf284" path="res://sound/sfx/jump_sound.mp3" id="7_boq1b"]
[ext_resource type="Texture2D" uid="uid://c30mqcp0s4c7w" path="res://texture/animation/rewind_fordward/rewind_under1.png" id="8_644l4"]
[ext_resource type="AudioStream" uid="uid://dy152fo78j8qw" path="res://sound/sfx/land.mp3" id="8_l65wn"]
[ext_resource type="Texture2D" uid="uid://8qllumxramma" path="res://texture/animation/rewind_fordward/rewind_value1.png" id="9_trvbf"]
[ext_resource type="AudioStream" uid="uid://dbde072kx466q" path="res://sound/sfx/dash_1.mp3" id="9_wvo7y"]
[ext_resource type="AudioStream" uid="uid://ctf45cw7y10p6" path="res://sound/sfx/stap1.mp3" id="10_n1wv6"]
[ext_resource type="AudioStream" uid="uid://csr55e6lg0qdx" path="res://sound/sfx/dash.mp3" id="10_rrl1p"]
[ext_resource type="Texture2D" uid="uid://ctrkanr2v1rhd" path="res://texture/animation/rewind_fordward/rewind_value2.png" id="10_u472l"]
[ext_resource type="AudioStream" uid="uid://f6luk8ft6rwe" path="res://sound/sfx/stap2.mp3" id="11_8ykhc"]
[ext_resource type="Texture2D" uid="uid://do1qjfmvq66ll" path="res://texture/animation/rewind_fordward/rewind_value3.png" id="11_mwdqw"]
[ext_resource type="Texture2D" uid="uid://dlfjglb2cknrn" path="res://texture/animation/lifebar_animation/lifebar_under1.png" id="12_gwwm2"]
[ext_resource type="Texture2D" uid="uid://d2melff1alqe8" path="res://texture/animation/rewind_fordward/fordward_under1.png" id="12_ogxli"]
[ext_resource type="Texture2D" uid="uid://bq382lvk5n308" path="res://texture/animation/rewind_fordward/fordward_value1.png" id="13_1auux"]
[ext_resource type="Texture2D" uid="uid://cthcfku6obduq" path="res://texture/animation/lifebar_animation/lifebar_under3.png" id="13_i21e1"]
[ext_resource type="Texture2D" uid="uid://b6j5oshemd86a" path="res://texture/animation/skull_animation/lifebar_full/skull09r.png" id="14_1ht2a"]
[ext_resource type="Texture2D" uid="uid://dvl05y7qo323e" path="res://texture/animation/rewind_fordward/fordward_value2.png" id="14_p1e2r"]
[ext_resource type="Texture2D" uid="uid://bff84u22hgb6a" path="res://texture/animation/lifebar_animation/lifebar_under2.png" id="14_papdr"]
[ext_resource type="Texture2D" uid="uid://be1raff1layo5" path="res://texture/animation/rewind_fordward/fordward_value3.png" id="15_g1v2v"]
[ext_resource type="Texture2D" uid="uid://cimgl6luqnprv" path="res://texture/animation/lifebar_animation/lifebar_value1.png" id="15_qsgin"]
[ext_resource type="Texture2D" uid="uid://mq3j6hjcwpf8" path="res://texture/animation/skull_animation/lifebar_full/skull07.png" id="15_voph3"]
[ext_resource type="Texture2D" uid="uid://duf6t1tj8mkyy" path="res://texture/animation/lifebar_animation/lifebar_value3.png" id="16_4wxqf"]
[ext_resource type="Texture2D" uid="uid://cxeh0j41rnq3y" path="res://texture/animation/skull_animation/lifebar_full/skull09l.png" id="16_jivcb"]
[ext_resource type="Theme" uid="uid://binvd3pgmo5ek" path="res://texture/menu/options.tres" id="16_yf8d2"]
[ext_resource type="AudioStream" uid="uid://cmkhg1lrsc3ur" path="res://sound/sfx/alert1.mp3" id="17_hc0rl"]
[ext_resource type="Texture2D" uid="uid://b7c00hoqrv8h1" path="res://texture/animation/skull_animation/lifebar_full/skull08.png" id="17_j1ia7"]
[ext_resource type="AudioStream" uid="uid://dg7abdapvvdyf" path="res://sound/sfx/alert2.mp3" id="17_o6q60"]
[ext_resource type="Texture2D" uid="uid://bhsjsawilrxqq" path="res://texture/animation/lifebar_animation/lifebar_value2.png" id="17_v3jjh"]
[ext_resource type="Texture2D" uid="uid://lkrnhrt2mc1" path="res://texture/animation/skull_animation/lifebar_full/skull01l.png" id="18_0rn1y"]
[ext_resource type="AudioStream" uid="uid://335hv8v3dkjh" path="res://sound/sfx/wall_slid.mp3" id="19_byri2"]
[ext_resource type="Texture2D" uid="uid://c34gfqsebm1pf" path="res://texture/animation/lifebar_animation/lifebar_under5.png" id="19_gcwaa"]
[ext_resource type="Texture2D" uid="uid://rme6jdq4oit1" path="res://texture/animation/skull_animation/lifebar_full/skull01r.png" id="19_is7kk"]
[ext_resource type="Texture2D" uid="uid://bgtdgt6nenv1b" path="res://texture/animation/skull_animation/lifebar_full/skull03r.png" id="20_bn5da"]
[ext_resource type="Texture2D" uid="uid://dkq6hswgrw3wt" path="res://texture/animation/skull_animation/lifebar_full/skull02r.png" id="21_duf88"]
[ext_resource type="Texture2D" uid="uid://dvofstw8vdgtj" path="res://texture/animation/skull_animation/lifebar_full/skull03l.png" id="22_h8wwa"]
[ext_resource type="Texture2D" uid="uid://kewwtlyx67c8" path="res://texture/animation/lifebar_animation/lifebar_value5.png" id="23_jrxpi"]
[ext_resource type="Texture2D" uid="uid://cfrrc50ym15df" path="res://texture/animation/skull_animation/lifebar_full/skull02l.png" id="23_pl4to"]
[ext_resource type="Texture2D" uid="uid://c3o340ubc4elj" path="res://texture/animation/skull_animation/lifebar_full/skull04.png" id="24_bewwb"]
[ext_resource type="Texture2D" uid="uid://ds60kyqq2gmyh" path="res://texture/animation/skull_animation/lifebar_full/skull05l.png" id="25_buug3"]
[ext_resource type="Texture2D" uid="uid://iy2wgh3rtia5" path="res://texture/animation/skull_animation/lifebar_full/skull05r.png" id="26_8vs4o"]
[ext_resource type="Texture2D" uid="uid://c6xo1rcq2x3gr" path="res://texture/animation/skull_animation/lifebar_full/skull06l.png" id="27_f3v7l"]
[ext_resource type="Texture2D" uid="uid://ct3tk664bxeao" path="res://texture/animation/skull_animation/lifebar_full/skull06r.png" id="28_dnnl7"]
[ext_resource type="Texture2D" uid="uid://m0v5mkymer33" path="res://texture/animation/skull_animation/lifebar_low/skull09r.png" id="29_tjcgl"]
[ext_resource type="Texture2D" uid="uid://qjbg4d17ad58" path="res://texture/animation/skull_animation/lifebar_low/skull07.png" id="30_2j3da"]
[ext_resource type="Texture2D" uid="uid://dsyw2lkpl2ekp" path="res://texture/animation/skull_animation/lifebar_low/skull09l.png" id="31_xr3hn"]
[ext_resource type="Texture2D" uid="uid://cbtnq8f5yftlu" path="res://texture/animation/skull_animation/lifebar_low/skull08.png" id="32_dboe2"]
[ext_resource type="Texture2D" uid="uid://bup1tlc3t3vay" path="res://texture/animation/skull_animation/lifebar_low/skull01l.png" id="33_cy7fg"]
[ext_resource type="Texture2D" uid="uid://clqetvcdpy4xe" path="res://texture/animation/skull_animation/lifebar_low/skull01r.png" id="34_hkmly"]
[ext_resource type="Texture2D" uid="uid://bgr6gfuy3568n" path="res://texture/animation/skull_animation/lifebar_low/skull03r.png" id="35_t5ede"]
[ext_resource type="Texture2D" uid="uid://gerhey4fdmrp" path="res://texture/animation/skull_animation/lifebar_low/skull02r.png" id="36_ehtnt"]
[ext_resource type="Texture2D" uid="uid://cmw2hxyb754dc" path="res://texture/animation/skull_animation/lifebar_low/skull03l.png" id="37_rlfa5"]
[ext_resource type="Texture2D" uid="uid://b7wbneomhjuv8" path="res://texture/animation/skull_animation/lifebar_low/skull02l.png" id="38_catht"]
[ext_resource type="Texture2D" uid="uid://b7vvxmjukfp4i" path="res://texture/animation/skull_animation/lifebar_low/skull04.png" id="39_482tp"]
[ext_resource type="Texture2D" uid="uid://civ67oaunbpwf" path="res://texture/animation/skull_animation/lifebar_low/skull05l.png" id="40_3mkwv"]
[ext_resource type="Texture2D" uid="uid://bq5pejsx6p4h8" path="res://texture/animation/skull_animation/lifebar_low/skull05r.png" id="41_ct3gt"]
[ext_resource type="Texture2D" uid="uid://bonrksg0l64dp" path="res://texture/animation/skull_animation/lifebar_low/skull06l.png" id="42_cyd5o"]
[ext_resource type="Texture2D" uid="uid://bg6bcsb2j4dln" path="res://texture/animation/skull_animation/lifebar_low/skull06r.png" id="43_l1quc"]
[ext_resource type="Texture2D" uid="uid://cipraxr1h3bls" path="res://texture/animation/skull_animation/lifebar_mid/skull09r.png" id="44_vu21o"]
[ext_resource type="Texture2D" uid="uid://ct1d1sora1lve" path="res://texture/animation/skull_animation/lifebar_mid/skull07.png" id="45_qpuht"]
[ext_resource type="Texture2D" uid="uid://cplmw3d7qeloq" path="res://texture/animation/skull_animation/lifebar_mid/skull09l.png" id="46_vgq02"]
[ext_resource type="Texture2D" uid="uid://da3omgw3vqrrn" path="res://texture/animation/skull_animation/lifebar_mid/skull08.png" id="47_wc8y1"]
[ext_resource type="Texture2D" uid="uid://2h7ygtdoxb0k" path="res://texture/animation/skull_animation/lifebar_mid/skull01l.png" id="48_4nucf"]
[ext_resource type="Texture2D" uid="uid://djn15ke2delhd" path="res://texture/animation/skull_animation/lifebar_mid/skull01r.png" id="49_cdbfj"]
[ext_resource type="Texture2D" uid="uid://bu5ecpm4cypv1" path="res://texture/animation/skull_animation/lifebar_mid/skull03r.png" id="50_bmw3d"]
[ext_resource type="Texture2D" uid="uid://cs3aoa3sb2dyt" path="res://texture/animation/skull_animation/lifebar_mid/skull02r.png" id="51_relbi"]
[ext_resource type="Texture2D" uid="uid://s3xrb0efnapn" path="res://texture/animation/skull_animation/lifebar_mid/skull03l.png" id="52_tadln"]
[ext_resource type="Texture2D" uid="uid://c741sdswals3p" path="res://texture/animation/skull_animation/lifebar_mid/skull02l.png" id="53_rqg0w"]
[ext_resource type="Texture2D" uid="uid://bctlwlha0cous" path="res://texture/animation/skull_animation/lifebar_mid/skull04.png" id="54_41g1h"]
[ext_resource type="Texture2D" uid="uid://cw2jtdyoc56xw" path="res://texture/animation/skull_animation/lifebar_mid/skull05l.png" id="55_yhrih"]
[ext_resource type="Texture2D" uid="uid://c1dhss5bps8o5" path="res://texture/animation/skull_animation/lifebar_mid/skull05r.png" id="56_7yhve"]
[ext_resource type="Texture2D" uid="uid://crrxdtxfkdrm6" path="res://texture/animation/skull_animation/lifebar_mid/skull06l.png" id="57_gwhtt"]
[ext_resource type="Texture2D" uid="uid://cxkrp767qwf3s" path="res://texture/animation/skull_animation/lifebar_mid/skull06r.png" id="58_v80oe"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fnahj"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wb6ju"]

[sub_resource type="SphereMesh" id="SphereMesh_aaw2v"]

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_jhn8w"]
length = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_htrso"]
shader = ExtResource("4_lf8tu")
shader_parameter/shake_power = 0.03
shader_parameter/shake_block_size = 30.5
shader_parameter/fade = 0.01
shader_parameter/direction_r = Vector2(1, 0)
shader_parameter/direction_g = Vector2(0.4, 1)
shader_parameter/direction_b = Vector2(-0.7, -0.3)

[sub_resource type="CameraTexture" id="CameraTexture_5vwnc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ngq0j"]
shader = ExtResource("2_tbtnr")
shader_parameter/shake = 0.015
shader_parameter/noiseQuality = 250.0
shader_parameter/noiseIntensity = 0.001
shader_parameter/offsetIntensity = 0.05
shader_parameter/colorOffsetIntensity = 0.5

[sub_resource type="CameraTexture" id="CameraTexture_nbi2e"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_5m0e2"]
frames = 3
speed_scale = 4.0
frame_0/texture = ExtResource("9_trvbf")
frame_1/texture = ExtResource("10_u472l")
frame_1/duration = 1.0
frame_2/texture = ExtResource("11_mwdqw")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_3n5ng"]
frames = 3
speed_scale = 4.0
frame_0/texture = ExtResource("13_1auux")
frame_1/texture = ExtResource("14_p1e2r")
frame_1/duration = 1.0
frame_2/texture = ExtResource("15_g1v2v")
frame_2/duration = 1.0

[sub_resource type="AnimatedTexture" id="AnimatedTexture_82bqp"]
frames = 5
frame_0/texture = ExtResource("12_gwwm2")
frame_0/duration = 7.0
frame_1/texture = ExtResource("13_i21e1")
frame_1/duration = 0.1
frame_2/texture = ExtResource("14_papdr")
frame_2/duration = 0.1
frame_3/texture = ExtResource("13_i21e1")
frame_3/duration = 0.1
frame_4/texture = ExtResource("19_gcwaa")
frame_4/duration = 0.1

[sub_resource type="AnimatedTexture" id="AnimatedTexture_12ny1"]
frames = 5
frame_0/texture = ExtResource("15_qsgin")
frame_0/duration = 7.0
frame_1/texture = ExtResource("16_4wxqf")
frame_1/duration = 0.1
frame_2/texture = ExtResource("17_v3jjh")
frame_2/duration = 0.1
frame_3/texture = ExtResource("16_4wxqf")
frame_3/duration = 0.1
frame_4/texture = ExtResource("23_jrxpi")
frame_4/duration = 0.1

[sub_resource type="SpriteFrames" id="SpriteFrames_o4rgc"]
animations = [{
"frames": [{
"duration": 0.5,
"texture": ExtResource("14_1ht2a")
}, {
"duration": 0.5,
"texture": ExtResource("15_voph3")
}, {
"duration": 0.5,
"texture": ExtResource("16_jivcb")
}, {
"duration": 0.5,
"texture": ExtResource("17_j1ia7")
}, {
"duration": 1.0,
"texture": ExtResource("18_0rn1y")
}],
"loop": false,
"name": &"fulllife_damege",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": ExtResource("18_0rn1y")
}, {
"duration": 1.5,
"texture": ExtResource("19_is7kk")
}, {
"duration": 1.5,
"texture": ExtResource("18_0rn1y")
}, {
"duration": 2.5,
"texture": ExtResource("19_is7kk")
}, {
"duration": 1.5,
"texture": ExtResource("17_j1ia7")
}, {
"duration": 5.0,
"texture": ExtResource("18_0rn1y")
}, {
"duration": 0.5,
"texture": ExtResource("20_bn5da")
}, {
"duration": 2.5,
"texture": ExtResource("21_duf88")
}, {
"duration": 5.0,
"texture": ExtResource("19_is7kk")
}, {
"duration": 0.5,
"texture": ExtResource("22_h8wwa")
}, {
"duration": 2.5,
"texture": ExtResource("23_pl4to")
}, {
"duration": 5.0,
"texture": ExtResource("24_bewwb")
}],
"loop": false,
"name": &"fulllife_default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_bewwb")
}, {
"duration": 1.0,
"texture": ExtResource("25_buug3")
}, {
"duration": 1.0,
"texture": ExtResource("24_bewwb")
}, {
"duration": 1.0,
"texture": ExtResource("26_8vs4o")
}],
"loop": false,
"name": &"fulllife_interaction",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_0rn1y")
}, {
"duration": 1.0,
"texture": ExtResource("27_f3v7l")
}, {
"duration": 1.0,
"texture": ExtResource("19_is7kk")
}, {
"duration": 1.0,
"texture": ExtResource("28_dnnl7")
}],
"loop": false,
"name": &"fulllife_item",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("29_tjcgl")
}, {
"duration": 0.5,
"texture": ExtResource("30_2j3da")
}, {
"duration": 0.5,
"texture": ExtResource("31_xr3hn")
}, {
"duration": 0.5,
"texture": ExtResource("32_dboe2")
}, {
"duration": 1.0,
"texture": ExtResource("33_cy7fg")
}],
"loop": false,
"name": &"lowlife_damege",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": ExtResource("33_cy7fg")
}, {
"duration": 1.5,
"texture": ExtResource("34_hkmly")
}, {
"duration": 1.5,
"texture": ExtResource("33_cy7fg")
}, {
"duration": 2.5,
"texture": ExtResource("34_hkmly")
}, {
"duration": 1.5,
"texture": ExtResource("32_dboe2")
}, {
"duration": 5.0,
"texture": ExtResource("33_cy7fg")
}, {
"duration": 0.5,
"texture": ExtResource("35_t5ede")
}, {
"duration": 2.5,
"texture": ExtResource("36_ehtnt")
}, {
"duration": 5.0,
"texture": ExtResource("34_hkmly")
}, {
"duration": 0.5,
"texture": ExtResource("37_rlfa5")
}, {
"duration": 2.5,
"texture": ExtResource("38_catht")
}, {
"duration": 5.0,
"texture": ExtResource("39_482tp")
}],
"loop": false,
"name": &"lowlife_default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("39_482tp")
}, {
"duration": 1.0,
"texture": ExtResource("40_3mkwv")
}, {
"duration": 1.0,
"texture": ExtResource("39_482tp")
}, {
"duration": 1.0,
"texture": ExtResource("41_ct3gt")
}],
"loop": false,
"name": &"lowlife_interaction",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("33_cy7fg")
}, {
"duration": 1.0,
"texture": ExtResource("42_cyd5o")
}, {
"duration": 1.0,
"texture": ExtResource("34_hkmly")
}, {
"duration": 1.0,
"texture": ExtResource("43_l1quc")
}],
"loop": false,
"name": &"lowlife_item",
"speed": 5.0
}, {
"frames": [{
"duration": 0.5,
"texture": ExtResource("44_vu21o")
}, {
"duration": 0.5,
"texture": ExtResource("45_qpuht")
}, {
"duration": 0.5,
"texture": ExtResource("46_vgq02")
}, {
"duration": 0.5,
"texture": ExtResource("47_wc8y1")
}, {
"duration": 1.0,
"texture": ExtResource("48_4nucf")
}],
"loop": false,
"name": &"midlife_damege",
"speed": 5.0
}, {
"frames": [{
"duration": 2.5,
"texture": ExtResource("48_4nucf")
}, {
"duration": 1.5,
"texture": ExtResource("49_cdbfj")
}, {
"duration": 1.5,
"texture": ExtResource("48_4nucf")
}, {
"duration": 2.5,
"texture": ExtResource("49_cdbfj")
}, {
"duration": 1.5,
"texture": ExtResource("47_wc8y1")
}, {
"duration": 5.0,
"texture": ExtResource("48_4nucf")
}, {
"duration": 0.5,
"texture": ExtResource("50_bmw3d")
}, {
"duration": 2.5,
"texture": ExtResource("51_relbi")
}, {
"duration": 5.0,
"texture": ExtResource("49_cdbfj")
}, {
"duration": 0.5,
"texture": ExtResource("52_tadln")
}, {
"duration": 2.5,
"texture": ExtResource("53_rqg0w")
}, {
"duration": 5.0,
"texture": ExtResource("54_41g1h")
}],
"loop": false,
"name": &"midlife_default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("54_41g1h")
}, {
"duration": 1.0,
"texture": ExtResource("55_yhrih")
}, {
"duration": 1.0,
"texture": ExtResource("54_41g1h")
}, {
"duration": 1.0,
"texture": ExtResource("56_7yhve")
}],
"loop": false,
"name": &"midlife_interaction",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("48_4nucf")
}, {
"duration": 1.0,
"texture": ExtResource("57_gwhtt")
}, {
"duration": 1.0,
"texture": ExtResource("49_cdbfj")
}, {
"duration": 1.0,
"texture": ExtResource("58_v80oe")
}],
"loop": false,
"name": &"midlife_item",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wps60"]
playback_mode = 2
streams_count = 2
stream_0/stream = ExtResource("10_n1wv6")
stream_0/weight = 1.0
stream_1/stream = ExtResource("11_8ykhc")
stream_1/weight = 1.0

[sub_resource type="Animation" id="Animation_pe7vq"]
resource_name = "fordward_to_rewind"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/Control2/ColorRect:anchors_preset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u68im"]
resource_name = "rewind_to_fordward"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/Control2/ColorRect:anchors_preset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wbyco"]
_data = {
"fordward_to_rewind": SubResource("Animation_pe7vq"),
"rewind_to_fordward": SubResource("Animation_u68im")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_rx7fi")

[node name="Default_colision" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_fnahj")

[node name="Default_aparence" type="MeshInstance3D" parent="Default_colision"]
visible = false
mesh = SubResource("CapsuleMesh_wb6ju")
skeleton = NodePath("../..")

[node name="Head_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1.28536, 0, 0, 0, 1, 0, 0.445734, 0)
target_position = Vector3(0, 1, 0)

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
fov = 100.0

[node name="DefaultHead_aparence" type="MeshInstance3D" parent="Head"]
transform = Transform3D(0.75, 0, 0, 0, 0.75, 0, 0, 0, 0.75, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_aaw2v")

[node name="Foot" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.734432, 0)
shape = SubResource("SeparationRayShape3D_jhn8w")

[node name="HUD" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_4h548")

[node name="Effects" type="AspectRatioContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1170.0
offset_top = -477.0
offset_right = -1170.0
offset_bottom = -477.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.91492, 2.59454)
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Fordward_effect" type="TextureRect" parent="HUD/Effects"]
visible = false
material = SubResource("ShaderMaterial_htrso")
layout_mode = 2
texture = SubResource("CameraTexture_5vwnc")

[node name="Rewind_effect" type="TextureRect" parent="HUD/Effects"]
visible = false
texture_repeat = 2
material = SubResource("ShaderMaterial_ngq0j")
layout_mode = 2
texture = SubResource("CameraTexture_nbi2e")

[node name="Crossair" type="CenterContainer" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Default_crossair_icon" type="Sprite2D" parent="HUD/Crossair"]
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_ucwmm")

[node name="Rewind_crossair_icon" type="Sprite2D" parent="HUD/Crossair"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_u0lgh")

[node name="Fordward_crossair_icon" type="Sprite2D" parent="HUD/Crossair"]
visible = false
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_scvu6")

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 6
size_flags_vertical = 3

[node name="Rewind_bar" type="TextureProgressBar" parent="HUD/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = -60.0
offset_right = 215.0
grow_vertical = 0
max_value = 500.0
value = 250.0
nine_patch_stretch = true
texture_under = ExtResource("8_644l4")
texture_progress = SubResource("AnimatedTexture_5m0e2")

[node name="Fordward_bar" type="TextureProgressBar" parent="HUD/Control"]
light_mask = 512
visibility_layer = 512
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -215.0
offset_top = -60.0
offset_right = -100.0
grow_horizontal = 0
grow_vertical = 0
max_value = 500.0
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("12_ogxli")
texture_progress = SubResource("AnimatedTexture_3n5ng")

[node name="Label" type="Label" parent="HUD"]
offset_left = 399.0
offset_top = 492.0
offset_right = 423.0
offset_bottom = 515.0
scale = Vector2(1.73498, 1.06578)

[node name="Pause_menu" type="MarginContainer" parent="HUD"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -253.0
offset_top = -283.0
offset_right = 247.0
offset_bottom = 217.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Pause_menu"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="HUD/Pause_menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("16_yf8d2")
text = "Resume
"

[node name="Quit" type="Button" parent="HUD/Pause_menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("16_yf8d2")
text = "Quit"

[node name="Life" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -203.0
offset_top = -81.0
offset_right = 547.0
offset_bottom = 119.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 6
size_flags_vertical = 10

[node name="Lifebar" type="TextureProgressBar" parent="HUD/Life"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -571.0
offset_top = -228.0
offset_right = 655.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
max_value = 250.0
value = 250.0
fill_mode = 6
nine_patch_stretch = true
texture_under = SubResource("AnimatedTexture_82bqp")
texture_progress = SubResource("AnimatedTexture_12ny1")

[node name="Skeleton" type="AnimatedSprite2D" parent="HUD/Life"]
position = Vector2(416, 64)
scale = Vector2(0.268333, 0.284228)
sprite_frames = SubResource("SpriteFrames_o4rgc")
animation = &"midlife_damege"
speed_scale = 0.5

[node name="Control2" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 104.0
offset_top = -23.0
offset_right = 104.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.821322, 0.854234)

[node name="ColorRect" type="ColorRect" parent="HUD/Control2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_bottom = 10.0
grow_horizontal = 0
pivot_offset = Vector2(50, 5)

[node name="Timers" type="Node" parent="."]

[node name="Big_jump_moment" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Big_jump_strenght" type="Timer" parent="Timers"]
wait_time = 0.05

[node name="Stap_timer" type="Timer" parent="Timers"]
wait_time = 0.35
one_shot = true

[node name="Wait_Timer_fordward" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="Wait_Timer_rewind" type="Timer" parent="Timers"]
wait_time = 3.0
one_shot = true

[node name="SFX" type="Node" parent="."]

[node name="jump_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_boq1b")
volume_db = -6.0
pitch_scale = 1.8

[node name="big_fall_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_l65wn")
volume_db = -7.0

[node name="big_jump_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_boq1b")
volume_db = -6.0
pitch_scale = 1.5

[node name="dash_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_wvo7y")
volume_db = -4.0

[node name="big_dash_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_rrl1p")
volume_db = -7.0

[node name="walking_sound" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_wps60")
volume_db = -15.0
pitch_scale = 0.65

[node name="alert" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_hc0rl")
volume_db = -30.0

[node name="alert2" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("17_o6q60")
volume_db = -20.0

[node name="wall_slide" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("19_byri2")

[node name="floor_slide" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("19_byri2")

[node name="Animation" type="AnimationPlayer" parent="."]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_wbyco")
}
speed_scale = 0.3

[connection signal="pressed" from="HUD/Pause_menu/VBoxContainer/Resume" to="HUD" method="_on_resume_pressed"]
[connection signal="pressed" from="HUD/Pause_menu/VBoxContainer/Quit" to="HUD" method="_on_quit_pressed"]
[connection signal="timeout" from="Timers/Big_jump_strenght" to="." method="_on_big_jump_strenght_timeout"]
